# kurs_corona

./: README.md
Crown/: CMakeLists.txt  main.cpp  vemath.cpp  vemath.h
